--- a/tests-js/index.html
+++ b/tests-js/index.html
@@ -27,9 +27,10 @@
         UiTester.init( $, {
             testsuites : [
                 {suit : "example1", url: "example1.html"},
+                {suit : "example2", url: "example2.html"}
             ],
             wwwRoot : "./../"
-        })
+        });
     });
 
 }( jQuery, window ));
