--- a/example1.html
+++ b/example1.html
@@ -1,11 +1,12 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title>Example1 Page</title>
+        <title>Example with a form</title>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-        <style>
+        <style type="text/css">
             body {
                 padding: 50px;
+                font: 14px Arial;
             }
             article {
                 padding: 20px 0;
@@ -25,17 +26,19 @@
     </head>
     <body>
         <header>
-            <h1>Example 1: Form</h1>
+            <h1>Example with a form</h1>
         </header>
         <section class="readme">
             <article>
                 <p>
-                    Please, find functional test results in
+                    Please, find the functional test results in
                     <a href="./tests-js/index.html">./tests-js/index.html</a>
                 </p>
                 <h2>Intended behavior</h2>
                 <p>
-                    Validates the form by requesting server controller before submiting
+                    When submitted, the form requests server controller for validation.
+                    If any error messages returned the submitting canceled and the messages
+                    are displayed next to corresponding fields.
                 </p>
                 <p>
                     Between validation request sent to the server and the response received
@@ -43,7 +46,7 @@
                 </p>
             </article>
         </section>
-        <section class="form-example">
+        <section class="example">
             <form class="signup-example">
                 <fieldset>
                     <legend>Sign Up</legend>
@@ -61,7 +64,7 @@
                 </fieldset>
             </form>
         </section>
-        <section class="widget-example">
+        <section class="a-mondatory-widget">
         </section>
 
 <script type="text/javascript">
@@ -80,7 +83,7 @@
            }
        }
    },
-      // Validates the form by requesting server controller before submiting
+      // Validates the form by requesting server controller before submitting
       // Between validation request sent to the server and the response received
       // events the submit button is inactive
       FormProcessor = (function() {
@@ -109,8 +112,10 @@
                     $btn.setReady();
                     if ( resp.status === "OK" ) {
                         that.submitForm();
+                        $form.trigger( "submitted.example", [] );
                     } else {
                         that.showErrorMsg( resp.errorMsg );
+                        $form.trigger( "validated.example", [] );
                     }
                 });
             },
@@ -126,7 +131,7 @@
         }
    }());
 
-   // Let's mock up jQuery AJAX alias
+   // Let's mock up jQuery AJAX requester and controller's job
    $.get = function( url, params, fn ) {
         var isValid = {
             email: function( email ) {
