Example files were supposed to be renamed... Hoped that GIT can assume that

--- a/tests-js/index.html
+++ b/tests-js/index.html
@@ -26,8 +26,8 @@
    $(window.document).ready(function(){
         UiTester.init( $, {
             testsuites : [
-                {suit : "example1", url: "example1.html"},
-                {suit : "example2", url: "example2.html"}
+                {suit : "example1", url: "ui-form-example.html"},
+                {suit : "example2", url: "ui-widget-example.html"}
             ],
             wwwRoot : "./../"
         });
