--- a/tests-js/index.html
+++ b/tests-js/index.html
@@ -10,6 +10,15 @@
 
         <script src="./tests.js" type="text/javascript"></script>
         <script src="./ui-tester.js" type="text/javascript"></script>
+
+        <style type="text/css">
+        iframe {
+            width: 100%;
+            height: 1px;
+            border: 0;
+        }
+        </style>
+}
     </head>
     <body>
         <div id="playground"></div>
